--- a/scraper/requirements.txt
+++ b/scraper/requirements.txt
@@ -1,5 +1,6 @@
 requests==2.31.0
 beautifulsoup4==4.12.2
-google-cloud-firestore==2.13.2
+google-cloud-firestore>=2.13.0
 firebase-admin==6.2.0
 schedule==1.2.0
+playwright==1.40.0
